#
# NeoPZ LinearSolvers makefile
#
# It will be processed by GNU automake to produce Makefile.in
#
# $Id#
#

DISTCLEANFILES = @PZ_DISTCLEANFILES@
CLEANFILES     = @PZ_CLEANFILES@

-include $(top_srcdir)/@PZ_MK@

linearsolversdir = $(prefix)/LinearSolvers

linearsolvers_HEADERS = $(wildcard *.h)

## --| NeoPZ |------------------------------------------------------------------
